--- a/pom.xml
+++ b/pom.xml
@@ -93,5 +93,16 @@
 			<artifactId>ehcache-core</artifactId>
 			<version>2.5.2</version>
 		</dependency>
+		
+				<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-core-asl</artifactId>
+			<version>1.9.7</version>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.7</version>
+		</dependency>
 	</dependencies>
 </project>
