--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project>
 	<modelVersion>4.0.0</modelVersion>
-	<packaging>jar</packaging>
 	<groupId>org.hy.dev</groupId>
 	<artifactId>hydev</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
@@ -9,9 +8,30 @@
 
 	<dependencies>
 		<dependency>
-		    <groupId>org.apache.kafka</groupId>
-		    <artifactId>kafka_2.8.0</artifactId>
-		    <version>0.8.0-beta1</version>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>2.8.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.yammer.metrics</groupId>
+		    <artifactId>metrics-core</artifactId>
+		    <version>2.2.0</version>
+		</dependency>		
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka_2.8.0</artifactId>
+			<version>0.8.0-beta1</version>
 		</dependency>
 	</dependencies>
 </project>
