--- a/pom.xml
+++ b/pom.xml
@@ -33,5 +33,10 @@
 			<artifactId>kafka_2.8.0</artifactId>
 			<version>0.8.0-beta1</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.hadoop</groupId>
+		    <artifactId>zookeeper</artifactId>
+		    <version>3.3.1</version>
+		</dependency>
 	</dependencies>
 </project>
