--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,17 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.5</version>
+		</dependency>
+		<!-- -->
+		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
 			<version>1.1.3</version>
@@ -24,19 +35,25 @@
 			<version>2.8.0</version>
 		</dependency>
 		<dependency>
-		    <groupId>com.yammer.metrics</groupId>
-		    <artifactId>metrics-core</artifactId>
-		    <version>2.2.0</version>
-		</dependency>		
+			<groupId>com.yammer.metrics</groupId>
+			<artifactId>metrics-core</artifactId>
+			<version>2.2.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.kafka</groupId>
 			<artifactId>kafka_2.8.0</artifactId>
 			<version>0.8.0-beta1</version>
 		</dependency>
+		<!-- 
+		<dependency> 
+			<groupId>org.apache.hadoop</groupId> 
+			<artifactId>zookeeper</artifactId> 
+			<version>3.3.1</version> </dependency>
+		 -->
 		<dependency>
-		    <groupId>org.apache.hadoop</groupId>
-		    <artifactId>zookeeper</artifactId>
-		    <version>3.3.1</version>
+			<groupId>org.apache.zookeeper</groupId>
+			<artifactId>zookeeper</artifactId>
+			<version>3.4.5</version>
 		</dependency>
 		<dependency>
 		    <groupId>org.apache.commons</groupId>
@@ -48,5 +65,10 @@
 		    <artifactId>junit</artifactId>
 		    <version>4.11</version>
 		</dependency>		
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy</artifactId>
+			<version>2.2.1</version>
+		</dependency>
 	</dependencies>
 </project>
