--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.apache.thrift</groupId>
+			<artifactId>libthrift</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.5</version>
@@ -44,31 +49,34 @@
 			<artifactId>kafka_2.8.0</artifactId>
 			<version>0.8.0-beta1</version>
 		</dependency>
-		<!-- 
-		<dependency> 
-			<groupId>org.apache.hadoop</groupId> 
-			<artifactId>zookeeper</artifactId> 
-			<version>3.3.1</version> </dependency>
-		 -->
+		<!-- <dependency> <groupId>org.apache.hadoop</groupId> <artifactId>zookeeper</artifactId> 
+			<version>3.3.1</version> </dependency> -->
 		<dependency>
 			<groupId>org.apache.zookeeper</groupId>
 			<artifactId>zookeeper</artifactId>
 			<version>3.4.5</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.apache.commons</groupId>
-		    <artifactId>commons-lang3</artifactId>
-		    <version>3.2.1</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.2.1</version>
 		</dependency>
 		<dependency>
-		    <groupId>junit</groupId>
-		    <artifactId>junit</artifactId>
-		    <version>4.11</version>
-		</dependency>		
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+		</dependency>
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy</artifactId>
 			<version>2.2.1</version>
-		</dependency>
+		</dependency>
+
+		<!-- netty 4 -->
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+			<version>4.0.4.Final</version>
+		</dependency>
 	</dependencies>
 </project>
