--- a/pom.xml
+++ b/pom.xml
@@ -118,4 +118,8 @@
       <version>4.0.4.Final</version>
     </dependency>
   </dependencies>
+
+  <build>
+    <sourceDirectory>src/main/scala</sourceDirectory>
+  </build>
 </project>
